[gd_scene load_steps=8 format=3 uid="uid://cekvrrpspxf05"]

[ext_resource type="FontFile" uid="uid://cke5t1cl6c21w" path="res://assets/fonts/PublicPixel-z84yD.ttf" id="1_i8asg"]
[ext_resource type="Script" uid="uid://couhklxvkauoq" path="res://util/game_over.gd" id="1_xwlfw"]
[ext_resource type="FontFile" uid="uid://n7quuucrm58i" path="res://assets/fonts/manaspace/manaspc.ttf" id="2_xfaaj"]
[ext_resource type="LabelSettings" uid="uid://drkwf6wcs2lo5" path="res://assets/resources/game_over_label.tres" id="3_iwi8l"]

[sub_resource type="LabelSettings" id="LabelSettings_15mjd"]
font = ExtResource("1_i8asg")
font_size = 32
font_color = Color(1, 0.196078, 0.0784314, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_18hqp"]
font = ExtResource("1_i8asg")
font_size = 32
font_color = Color(0.203922, 0.635294, 0.576471, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qhnxb"]
font = ExtResource("1_i8asg")
font_color = Color(0.537255, 0.556863, 0.282353, 1)

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 2
layer = 2
visible = false
script = ExtResource("1_xwlfw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 0.788235)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="lblDeath" type="Label" parent="VBoxContainer/Control"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xfaaj")
text = "You are destroyed. Mercury is doomed..."
label_settings = SubResource("LabelSettings_15mjd")
horizontal_alignment = 1

[node name="lblWin" type="Label" parent="VBoxContainer/Control"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xfaaj")
text = "Mission complete"
label_settings = SubResource("LabelSettings_18hqp")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="lblContinue" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xfaaj")
text = "Press "
label_settings = ExtResource("3_iwi8l")
horizontal_alignment = 1

[node name="lblContinueSpace" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xfaaj")
text = "space"
label_settings = SubResource("LabelSettings_qhnxb")
horizontal_alignment = 1

[node name="lblContinue2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xfaaj")
text = " to continue"
label_settings = ExtResource("3_iwi8l")
horizontal_alignment = 1

[node name="GameScore" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xfaaj")
text = "Score: 1000"
label_settings = ExtResource("3_iwi8l")
